--- a/post-installation/validations/analytics/validate.yml
+++ b/post-installation/validations/analytics/validate.yml
@@ -31,19 +31,22 @@
   vars:
     property_folders:
     - "~/.apigee-secure"
-    - "~/.apigee/custom-properties.yml"
+    - "~/.apigee"
   roles:
-  - { role: apigee-opdk-server-self, server_types: ['ps'], tags: ['self'] }
+    - { role:  apigee-opdk-modules }
+    - { role: apigee-opdk-server-self, server_types: ['ps'], tags: ['self'] }
 
 - name: Apigee Postgres Registration Status
   hosts: pg
   gather_facts: no
   tags: ['registration']
+
   vars:
     property_folders:
-    - "~/.apigee-secure"
-    - "~/.apigee/custom-properties.yml"
+      - "~/.apigee-secure"
+      - "~/.apigee"
   roles:
+    - { role:  apigee-opdk-modules }
     - { role: apigee-opdk-server-self, server_types: ['ps'], tags: ['self'] }
     - { role: apigee-opdk-server-registration-state, username: "{{ opdk_user_email }}", password: "{{ opdk_user_pass }}", server_self: "{{ edge_ps_self }}", mgmt_server_ip: "{{ local_mgmt_ip }}" }
 
@@ -51,24 +54,26 @@
   hosts: ms[0]
   gather_facts: no
   tags: ['scope']
+
   vars:
     property_folders:
-    - "~/.apigee-secure"
-    - "~/.apigee/custom-properties.yml"
+      - "~/.apigee-secure"
+      - "~/.apigee"
   roles:
-  - { role: apigee-opdk-modules }
-  - { role: apigee-opdk-setup-scopes-state, ax_group: "{{ scopes_axgroup | default('axgroup001') }}" }
+    - { role:  apigee-opdk-modules }
+    - { role: apigee-opdk-setup-scopes-state, ax_group: "{{ scopes_axgroup | default('axgroup001') }}" }
 
 - name: Analytics status
   hosts: ms[0]
   gather_facts: no
   tags: ['axstatus']
+
   vars:
     property_folders:
-    - "~/.apigee-secure"
-    - "~/.apigee/custom-properties.yml"
+      - "~/.apigee-secure"
+      - "~/.apigee"
   roles:
-  - apigee-opdk-modules
+    - { role:  apigee-opdk-modules }
   tasks:
   - name: List org and env provisioning axstatus
     uri:
@@ -80,12 +85,13 @@
   hosts: ms[0]
   gather_facts: no
   tags: ['axgroups']
+
   vars:
     property_folders:
-    - "~/.apigee-secure"
-    - "~/.apigee/custom-properties.yml"
+      - "~/.apigee-secure"
+      - "~/.apigee"
   roles:
-  - apigee-opdk-modules
+    - { role:  apigee-opdk-modules }
   tasks:
   - name: List analytics groups
     uri:
@@ -97,12 +103,13 @@
   hosts: pgmaster
   gather_facts: no
   tags: ['axtables']
+
   vars:
     property_folders:
-    - "~/.apigee-secure"
-    - "~/.apigee/custom-properties.yml"
+      - "~/.apigee-secure"
+      - "~/.apigee"
   roles:
-  - apigee-opdk-modules
+    - { role:  apigee-opdk-modules }
   tasks:
   - name: Describe postgres analytics table
     shell: /usr/bin/psql -h {{ apigee_home }}/var/run/apigee-postgresql -U {{ pg_user }} -d apigee -w -c '\d analytics."{{ org_name }}.{{ env_name }}.fact"'
