--- a/installations/aio/requirements.yml
+++ b/installations/aio/requirements.yml
@@ -18,6 +18,8 @@
 
 - src: https://github.com/carlosfrias/apigee-opdk-setup-openjdk.git
 
+- src: https://github.com/carlosfrias/apigee-opdk-setup-openjdk-cache.git
+
 - src: https://github.com/carlosfrias/apigee-opdk-setup-selinux-disable.git
 
 - src: https://github.com/carlosfrias/apigee-opdk-shutdown-iptables.git
