--- a/installations/mirror/requirements.yml
+++ b/installations/mirror/requirements.yml
@@ -17,6 +17,8 @@
 
 - src: https://github.com/carlosfrias/apigee-opdk-setup-openjdk.git
 
+- src: https://github.com/carlosfrias/apigee-opdk-setup-openjdk-cache.git
+
 - src: https://github.com/carlosfrias/apigee-opdk-setup-license.git
 
 - src: https://github.com/carlosfrias/apigee-opdk-setup-bootstrap.git
