Updated vars and roles used

--- a/post-installation/download-logs/requirements.yml
+++ b/post-installation/download-logs/requirements.yml
@@ -1,3 +1,5 @@
 ---
 # Updated Readme's
 - src: https://github.com/carlosfrias/apigee-fetch-files.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-modules.git
