Updated vars and roles used

--- a/post-installation/download-logs/download.yml
+++ b/post-installation/download-logs/download.yml
@@ -38,4 +38,5 @@
 
   roles:
   - { role: apigee-opdk-modules }
+  - { role: apigee-opdk-setup-bootstrap-cache }
   - { role: apigee-fetch-files, download_pattern: "{{ pattern }}", download_folder: "{{ target_logs_folder }}" }
