--- a/post-installation/download-logs/requirements.yml
+++ b/post-installation/download-logs/requirements.yml
@@ -3,3 +3,5 @@
 - src: https://github.com/carlosfrias/apigee-fetch-files.git
 
 - src: https://github.com/carlosfrias/apigee-opdk-modules.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-setup-bootstrap-cache.git
