Updated vars and roles used

--- a/installations/devportal/requirements.yml
+++ b/installations/devportal/requirements.yml
@@ -17,6 +17,8 @@
 
 - src: https://github.com/carlosfrias/apigee-opdk-setup-os-limits.git
 
+- src: https://github.com/carlosfrias/apigee-opdk-setup-bootstrap-cache.git
+
 - src: https://github.com/carlosfrias/apigee-opdk-setup-bootstrap.git
 
 - src: https://github.com/carlosfrias/apigee-opdk-setup-silent-installation-config.git
