--- a/installations/aio/install.yml
+++ b/installations/aio/install.yml
@@ -24,6 +24,7 @@
   - { role: apigee-opdk-setup-apigee-user, tags: ['config', 'apigee-user', 'bootstrap'] }
   - { role: apigee-opdk-setup-apigee-user-ownership, tags: ['apigee-user', 'bootstrap'] }
   - { role: apigee-opdk-setup-java-home, tags: ['java-home', 'bootstrap'] }
+  - { role: apigee-opdk-setup-bootstrap-cache, tags: ['apigee-bootstrap', 'bootstrap'] }
   - { role: apigee-opdk-setup-bootstrap, tags: ['apigee-bootstrap', 'bootstrap'] }
   - { role: apigee-opdk-setup-license, tags: ['license', 'bootstrap', 'common'] }
   - { role: apigee-opdk-setup-component-install, component: 'apigee-setup', tags: ['setup', 'common'] }
