--- a/installations/aio/requirements.yml
+++ b/installations/aio/requirements.yml
@@ -32,6 +32,8 @@
 
 
 # Ansible Roles for Bootstrap Installation and Setup
+- src: https://github.com/carlosfrias/apigee-opdk-setup-bootstrap-cache.git
+
 - src: https://github.com/carlosfrias/apigee-opdk-setup-bootstrap.git
 
 - src: https://github.com/carlosfrias/apigee-opdk-setup-bootstrap-archive-installer.git
