--- a/installations/devportal/install.yml
+++ b/installations/devportal/install.yml
@@ -15,6 +15,7 @@
   - { role: apigee-opdk-setup-apigee-user, tags: ['apigee-user', 'bootstrap'] }
   - { role: apigee-opdk-setup-apigee-user-ownership, tags: ['apigee-user', 'bootstrap'] }
   - { role: apigee-opdk-setup-java-home, tags: ['java-home', 'bootstrap'] }
+  - { role: apigee-opdk-setup-bootstrap-cache, tags: ['apigee-bootstrap', 'bootstrap'] }
   - { role: apigee-opdk-setup-bootstrap, tags: ['apigee-bootstrap', 'bootstrap'] }
   - { role: apigee-opdk-setup-license, tags: ['license', 'bootstrap', 'common'] }
   - { role: apigee-opdk-setup-component-install, component: 'apigee-setup', tags: ['setup', 'apigee-component-install', 'apigee-pre-req','common-install', 'common'] }
