--- a/installations/monetization/requirements.yml
+++ b/installations/monetization/requirements.yml
@@ -30,6 +30,8 @@
 
 
 # Ansible Roles for Bootstrap Installation and Setup
+- src: https://github.com/carlosfrias/apigee-opdk-setup-bootstrap-cache.git
+
 - src: https://github.com/carlosfrias/apigee-opdk-setup-bootstrap.git
 
 - src: https://github.com/carlosfrias/apigee-opdk-setup-bootstrap-archive-installer.git
