--- a/installations/devportal/install.yml
+++ b/installations/devportal/install.yml
@@ -10,7 +10,17 @@
     - "~/.apigee"
   roles:
   - { role: apigee-opdk-modules, tags: ['minimum', 'cache', 'ds', 'ms', 'rmp', 'r', 'mp', 'qpid', 'pg', 'pgmaster', 'pgstandby', 'org', 'validate', 'validate-cleanup'] }
-  - { role: apigee-opdk-os-pre-requisites, tags: ['os'] }
+  - { role: apigee-opdk-setup-os-epel, tags: ['epel'] }
+  - { role: apigee-opdk-shutdown-iptables, tags: ['minimum', 'iptables'] }
+  - { role: apigee-opdk-yum-repository-proxy-config, tags: ['yum-proxy-config']}
+  - { role: apigee-opdk-setup-os-minimum, tags: ['os-minimum'] }
+  - { role: apigee-opdk-setup-os-limits, tags: ['limit'] }
+  - { role: apigee-opdk-setup-os-sysctl, tags: ['sysctl'] }
+  - { role: apigee-opdk-setup-selinux-disable, tags: ['minimum', 'selinux'] }
+  - { role: apigee-server-restart, tags: ['minimum', 'restart-server'], start_check_delay: 30, when: (selinux_disabled is defined and selinux_disabled.changed) or (iptables_disabled is defined and not iptables_disabled) or (force_restart is defined and force_restart)  }
+  - { role: apigee-opdk-setup-os-common, tags: ['os-common'] }
+  - { role: apigee-opdk-setup-openjdk-cache, tags: ['minimum', 'openjdk'], jdk_version: '1.8' }
+  - { role: apigee-opdk-setup-openjdk, tags: ['minimum', 'openjdk'], jdk_version: '1.8' }
   - { role: apigee-opdk-setup-target-links, tags: ['links', 'bootstrap'] }
   - { role: apigee-opdk-setup-apigee-user, tags: ['apigee-user', 'bootstrap'] }
   - { role: apigee-opdk-setup-apigee-user-ownership, tags: ['apigee-user', 'bootstrap'] }
