--- a/installations/devportal/requirements.yml
+++ b/installations/devportal/requirements.yml
@@ -21,6 +21,8 @@
 
 - src: https://github.com/carlosfrias/apigee-opdk-setup-bootstrap.git
 
+- src: https://github.com/carlosfrias/apigee-opdk-setup-bootstrap-archive-installer.git
+
 - src: https://github.com/carlosfrias/apigee-opdk-setup-silent-installation-config.git
 
 - src: https://github.com/carlosfrias/apigee-opdk-setup-component.git
