--- a/infrastructure/gce-management/gce-dynamic/shared-properties.yml
+++ b/infrastructure/gce-management/gce-dynamic/shared-properties.yml
@@ -5,7 +5,7 @@ gcp_service_account_file: ~/.apigee-secure/sandbox-1f5fb288d552.json
 gcp_zone: "us-central1-c"
 gcp_region: "us-central1"
 network_name_default: "default"
-name_instance: "delete-apigee-instance"
+name_instance: "cf"
 name_instance_network_tag: "{{ name_instance }}-network-tag"
 name_firewall: "{{ name_instance }}-firewall"
 name_address: "{{ name_instance }}-address"
