--- a/infrastructure/gce-management/gce-dynamic/create.yml
+++ b/infrastructure/gce-management/gce-dynamic/create.yml
@@ -6,8 +6,9 @@
   vars_files:
   - shared-properties.yml
 
-#  roles:
-#   - { role: apigee-opdk-port-check }
+  roles:
+   - { role: apigee-opdk-port-check-settings }
+   - { role: apigee-opdk-port-check }
 
   tasks:
    - name: create a network
