--- a/infrastructure/gce-management/gce-dynamic/create.yml
+++ b/infrastructure/gce-management/gce-dynamic/create.yml
@@ -45,16 +45,12 @@
        project: "{{ gcp_project }}"
        auth_kind: "{{ gcp_auth_kind }}"
        service_account_file: "{{ gcp_service_account_file }}"
+       address_type: INTERNAL
        scopes:
        - "{{ scope_compute }}"
        state: present
      register: address
      loop: "{{ address_types }}"
-
-   - name: Output address
-     tags: ['ext-addr']
-     debug:
-       var: address
 
    - name: create instances
      include_tasks: create-instance.yml
