--- a/infrastructure/gce-management/gce-dynamic/create.yml
+++ b/infrastructure/gce-management/gce-dynamic/create.yml
@@ -54,7 +54,7 @@
      loop: "{{ address_types }}"
 
    - name: create instances
-     tags: ['instances']
+     tags: ['instances','bastion']
      include_tasks: create-instance.yml
      with_sequence: start={{ start | default('1') }} end={{ end | default('1') }}
      loop_control:
