--- a/infrastructure/gce-management/gce-dynamic/create-instance.yml
+++ b/infrastructure/gce-management/gce-dynamic/create-instance.yml
@@ -1,8 +1,8 @@
 ---
-- name: create a disk
+- name: create a bastion disk
   tags: ['instances', 'disks']
   gcp_compute_disk:
-    name: '{{ name_disk }}-{{ sequence }}'
+    name: '{{ name_instance }}-bastion-disk'
     size_gb: "{{ disk_size }}"
     source_image: '{{ disk_source_image }}'
     zone: "{{ gcp_zone }}"
@@ -12,7 +12,7 @@
     scopes:
     - "{{ scope_compute }}"
     state: present
-  register: disk
+  register: bastion_disk
 
 - name: create a bastion host
   tags: ['instances', 'bastion']
@@ -23,9 +23,7 @@
     disks:
     - auto_delete: true
       boot: true
-      initialize_params:
-        disk_name: "{{ name_instance }}-bastion-disk"
-        disk_size_gb: 25
+      source: "{{ bastion_disk }}"
     network_interfaces:
     - network: "{{ network }}"
       access_configs:
@@ -42,6 +40,21 @@
        'startup-script': 'rm -f /etc/sudoers.d/remove-requiretty && echo \"Defaults !requiretty\" >> /etc/sudoers.d/remove-requiretty' 
     scopes:
     - "{{ scope_compute }}"
+
+- name: create a disk
+  tags: ['instances', 'disks']
+  gcp_compute_disk:
+    name: '{{ name_disk }}-{{ sequence }}'
+    size_gb: "{{ disk_size }}"
+    source_image: '{{ disk_source_image }}'
+    zone: "{{ gcp_zone }}"
+    project: "{{ gcp_project }}"
+    auth_kind: "{{ gcp_auth_kind }}"
+    service_account_file: "{{ gcp_service_account_file }}"
+    scopes:
+    - "{{ scope_compute }}"
+    state: present
+  register: disk
 
 - name: create an instance
   tags: ['instances']
