--- a/infrastructure/ssh-bastion-host/configure-ssh.yml
+++ b/infrastructure/ssh-bastion-host/configure-ssh.yml
@@ -12,7 +12,8 @@
     bastion_host_user: friasc
 
   tasks:
-    - name: Update SSH Config with Bastion Configuration
+    - name: Update SSH Config with ProxyCommand to Bastion Configuration
+      tags: ['proxy-command']
       blockinfile:
         path: ~/.ssh/config
         create: yes
@@ -23,6 +24,14 @@
             ProxyCommand ssh -W %h:%p {{ bastion_host_name }}
             IdentityFile {{ protected_private_key | default('~/.ssh/id_rsa') }}
 
+    - name: Update SSH Config with Bastion Configuration
+      tags: ['bastion-config']
+      blockinfile:
+        path: ~/.ssh/config
+        create: yes
+        backup: yes
+        mode: 0400
+        block: |
           Host {{ bastion_host_name }}
             Hostname {{ bastion_host_ip }}
             User {{ bastion_host_user }}
