Separated bastion config from config of proxy command

--- a/infrastructure/gce-management/gce-dynamic/create-instance.yml
+++ b/infrastructure/gce-management/gce-dynamic/create-instance.yml
@@ -68,9 +68,9 @@
       source: "{{ disk }}"
     network_interfaces:
     - network: "{{ network }}"
-#      access_configs:
-#      - name: 'External NAT'
-#        type: 'ONE_TO_ONE_NAT'
+      access_configs:
+      - name: 'External NAT'
+        type: 'ONE_TO_ONE_NAT'
 #        nat_ip: "{{ address }}"
     zone: "{{ gcp_zone }}"
     project: "{{ gcp_project }}"
