Updated to create dynamic planet

--- a/infrastructure/gce-management/gce-dynamic/create.yml
+++ b/infrastructure/gce-management/gce-dynamic/create.yml
@@ -23,6 +23,7 @@
      register: network
 
    - name: create firewall rule
+     tags: ['firewall']
      gcp_compute_firewall:
        name: "{{ name_firewall }}-{{ item.port_type }}"
        project: "{{ gcp_project }}"
