Updated to create dynamic planet

--- a/infrastructure/gce-management/gce-create-instances.yml
+++ b/infrastructure/gce-management/gce-create-instances.yml
@@ -14,7 +14,7 @@
   - gce-properties.yml
 
   tasks:
-  - name: Assert
+#  - name: Assert
 
   - name: Launch instances using image
     tags: ['launch']
