--- a/infrastructure/ssh-bastion-host/configure-ssh.yml
+++ b/infrastructure/ssh-bastion-host/configure-ssh.yml
@@ -6,41 +6,7 @@
   vars_files:
     - bastion_host_attribute.yml
 
-  tasks:
-    - name: Assert ProxyCommand Attributes
-      tags: ['proxy-command']
-      assert:
-        that:
-          - target_host_range is defined
-          - bastion_host_name is defined
-          - protected_private_key is defined
-        msg: Missing attributes required to set ProxyCommand
-
-    - name: Update SSH Config with ProxyCommand to Bastion Configuration
-      tags: ['proxy-command']
-      blockinfile:
-        path: ~/.ssh/config
-        create: yes
-        backup: yes
-        mode: 0400
-        block: |
-          Host {{ target_host_range }}
-            ProxyCommand ssh -W %h:%p {{ bastion_host_name }}
-            IdentityFile {{ protected_private_key | default('~/.ssh/id_rsa') }}
-
-    - name: Update SSH Config with Bastion Configuration
-      tags: ['bastion-config']
-      blockinfile:
-        path: ~/.ssh/config
-        create: yes
-        backup: yes
-        mode: 0400
-        block: |
-          Host {{ bastion_host_name }}
-            Hostname {{ bastion_host_ip }}
-            User {{ bastion_host_user }}
-            IdentityFile "{{ bastion_host_private_key | default('~/.ssh/id_rsa') }}"
-            ControlMaster auto
-            ControlPath ~/.ssh/ansible-%r@%h:%p
-            ControlPersist 5m
+  roles:
+    - { role: bastion-host-proxycommand, tags: ['proxy-command'] }
+    - { role: bastion-ssh-config, tags: ['bastion-config'] }
 
