udpated gcp management

--- a/infrastructure/gce-management/gce-properties.yml
+++ b/infrastructure/gce-management/gce-properties.yml
@@ -6,9 +6,9 @@ external_projects: 'eip-images'
 image: 'centos-7'
 zone: 'us-east1-b'
 host_prefix: 'cf'
-labels:
-  carlos: ''
-firewall_tag: 'dev-test'
-default_firewall_tags:
-- 'default-zkrxups2f6ccnycpl3bokiut'
-- "{{ firewall_tag }}"
+#labels:
+#  carlos: ''
+#firewall_tag: 'dev-test'
+#default_firewall_tags:
+#- 'default-zkrxups2f6ccnycpl3bokiut'
+#- "{{ firewall_tag }}"
