--- a/infrastructure/gce-management/gce-dynamic/create.yml
+++ b/infrastructure/gce-management/gce-dynamic/create.yml
@@ -10,53 +10,38 @@
    - { role: apigee-opdk-port-check-settings }
 
   tasks:
-   - name: create a network
-     tags: ['network', 'instances','bastion']
-     gcp_compute_network:
-       name: "{{ network_name_default }}"
-       project: "{{ gcp_project }}"
-       auth_kind: "{{ gcp_auth_kind }}"
-       service_account_file: "{{ gcp_service_account_file }}"
-       scopes:
-         - "{{ scope_compute }}"
-       state: present
-     register: network
+#   - name: create a network
+#     tags: ['network', 'instances','bastion']
+#     gcp_compute_network:
+#       name: "{{ network_name_default }}"
+#       project: "{{ gcp_project }}"
+#       auth_kind: "{{ gcp_auth_kind }}"
+#       service_account_file: "{{ gcp_service_account_file }}"
+#       scopes:
+#         - "{{ scope_compute }}"
+#       state: present
+#     register: network
 
-   - name: create firewall rule
-     tags: ['firewall']
-     gcp_compute_firewall:
-       name: "{{ name_firewall }}-{{ item.port_type }}"
-       project: "{{ gcp_project }}"
-       auth_kind: "{{ gcp_auth_kind }}"
-       service_account_file: "{{ gcp_service_account_file }}"
-       state: present
-       target_tags: ['{{ name_instance }}-{{ item.port_type }}-firewall-tag']
-       network: "global/networks/{{ network.name }}"
-       scopes:
-         - "{{ scope_compute }}"
-       allowed: 
-       - ip_protocol: tcp
-         ports: "{{ item.ports }}"
-     loop: "{{ firewall_ports }}"
+#   - name: create firewall rule
+#     tags: ['firewall']
+#     gcp_compute_firewall:
+#       name: "{{ name_firewall }}-{{ item.port_type }}"
+#       project: "{{ gcp_project }}"
+#       auth_kind: "{{ gcp_auth_kind }}"
+#       service_account_file: "{{ gcp_service_account_file }}"
+#       state: present
+#       target_tags: ['{{ name_instance }}-{{ item.port_type }}-firewall-tag']
+#       network: "global/networks/{{ network.name }}"
+#       scopes:
+#         - "{{ scope_compute }}"
+#       allowed:
+#       - ip_protocol: tcp
+#         ports: "{{ item.ports }}"
+#     loop: "{{ firewall_ports }}"
 
-   - name: create an address
-     tags: ['ext-addr']
-     gcp_compute_address:
-       name: '{{ name_address }}-{{ item }}-lb'
-       region: "{{ gcp_region }}"
-       project: "{{ gcp_project }}"
-       auth_kind: "{{ gcp_auth_kind }}"
-       service_account_file: "{{ gcp_service_account_file }}"
-       address_type: EXTERNAL
-       scopes:
-       - "{{ scope_compute }}"
-       state: present
-     register: address
-     loop: "{{ address_types }}"
-
-   - name: create bastion host
-     tags: ['instances','bastion']
-     include_tasks: create-bastion-host.yml
+#   - name: create bastion host
+#     tags: ['instances','bastion']
+#     include_tasks: create-bastion-host.yml
 
    - name: create instances
      tags: ['instances','bastion']
