--- a/infrastructure/gce-management/gce-dynamic/create-instance.yml
+++ b/infrastructure/gce-management/gce-dynamic/create-instance.yml
@@ -63,11 +63,17 @@
     service_account_file: "{{ gcp_service_account_file }}"
     tags:
       items:
-      - "{{ name_instance_network_tag }}"
+      - delete-apigee-instance-firewall
     metadata:
        'startup-script': 'rm -f /etc/sudoers.d/remove-requiretty && echo \"Defaults !requiretty\" >> /etc/sudoers.d/remove-requiretty'
     scopes:
     - "{{ scope_compute }}"
-  async: 45
-  poll: 0
+  register: instance
+
+- name: Wait for SSH to come up
+  wait_for: 
+    host: "{{ instance.address }}"
+    port: 22
+    delay: 10
+    timeout: 60
 
