update to gce mgmt

--- a/infrastructure/gce-management/gce-dynamic/create.yml
+++ b/infrastructure/gce-management/gce-dynamic/create.yml
@@ -45,7 +45,7 @@
 
    - name: create instances
      tags: ['instances','bastion']
-     include_tasks: create-instance.yml
+     include_tasks: create-instance-literal.yml
      with_sequence: start={{ start | default('1') }} end={{ end | default('1') }}
      loop_control:
        loop_var: sequence 
