update to gce mgmt

--- a/infrastructure/gce-management/gce-dynamic/create-instance-literal.yml
+++ b/infrastructure/gce-management/gce-dynamic/create-instance-literal.yml
@@ -35,7 +35,7 @@
       boot: true
       source: "{{ disk }}"
     network_interfaces:
-    - network: default
+    - network: "{{ network }}"
 #      access_configs:
 #      - name: 'External NAT'
 #        type: 'ONE_TO_ONE_NAT'
