--- a/infrastructure/gce-management/gce-dynamic/create-instance-literal.yml
+++ b/infrastructure/gce-management/gce-dynamic/create-instance-literal.yml
@@ -1,7 +1,7 @@
 ---
 - name: create a network
   gcp_compute_network:
-   name: apigee-network
+   name: apigeenetwork
    project: sandbox-173316
    auth_kind: serviceaccount
    service_account_file: ~/.apigee-secure/sandbox-1f5fb288d552.json
