--- a/infrastructure/gce-management/gce-dynamic/create-instance-literal.yml
+++ b/infrastructure/gce-management/gce-dynamic/create-instance-literal.yml
@@ -11,6 +11,21 @@
    auto_create_subnetworks: yes
   register: network
 
+ - name: create firewall rule
+   gcp_compute_firewall:
+     name: allow-ssh
+     project: sandbox-173316
+     auth_kind: serviceaccount
+     service_account_file: ~/.apigee-secure/sandbox-1f5fb288d552.json
+     state: present
+     target_tags: ['allow-ssh']
+     network: "{{ network }}"
+     scopes:
+       - https://www.googleapis.com/auth/compute
+     allowed:
+     - ip_protocol: tcp
+       ports: 22
+
 - name: create a disk
   gcp_compute_disk:
     name: cf-disk
@@ -46,7 +61,7 @@
     service_account_file: ~/.apigee-secure/sandbox-1f5fb288d552.json
     tags:
       items:
-      - delete-apigee-instance-firewall
+      - allow-ssh
     metadata:
        'startup-script': 'rm -f /etc/sudoers.d/remove-requiretty && echo \"Defaults !requiretty\" >> /etc/sudoers.d/remove-requiretty'
     scopes:
