--- a/infrastructure/gce-management/gce-dynamic/create-instance-literal.yml
+++ b/infrastructure/gce-management/gce-dynamic/create-instance-literal.yml
@@ -18,7 +18,8 @@
      auth_kind: serviceaccount
      service_account_file: ~/.apigee-secure/sandbox-1f5fb288d552.json
      state: present
-     target_tags: ['allow-ssh']
+     target_tags:
+       - 'allow-ssh'
      network: "{{ network }}"
      scopes:
        - https://www.googleapis.com/auth/compute
