--- a/infrastructure/gce-management/gce-dynamic/create-instance-literal.yml
+++ b/infrastructure/gce-management/gce-dynamic/create-instance-literal.yml
@@ -13,16 +13,16 @@
 
  - name: create firewall rule
    gcp_compute_firewall:
-     name: allowssh
-     project: sandbox-173316
-     auth_kind: serviceaccount
-     service_account_file: ~/.apigee-secure/sandbox-1f5fb288d552.json
-     state: present
+     name: "allowssh"
+     project: "sandbox-173316"
+     auth_kind: "serviceaccount"
+     service_account_file: "~/.apigee-secure/sandbox-1f5fb288d552.json"
+     state: "present"
      target_tags:
        - 'allow-ssh'
      network: "{{ network }}"
      scopes:
-       - https://www.googleapis.com/auth/compute
+       - "https://www.googleapis.com/auth/compute"
      allowed:
      - ip_protocol: tcp
        ports: 22
